RESOLVED FIXED100963
[V8] The V8DOMMap visitors are no longer needed
https://bugs.webkit.org/show_bug.cgi?id=100963
Summary [V8] The V8DOMMap visitors are no longer needed
Adam Barth
Reported 2012-11-01 09:11:29 PDT
[V8] The V8DOMMap visitors are no longer needed
Attachments
Patch (4.99 KB, patch)
2012-11-01 09:12 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-11-01 09:12:17 PDT
Kentaro Hara
Comment 2 2012-11-01 09:15:43 PDT
Comment on attachment 171869 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171869&action=review > Source/WebCore/bindings/v8/V8DOMMap.cpp:-88 > -void visitDOMObjects(DOMWrapperVisitor<void>* visitor) This is not used by anybody, right?
Adam Barth
Comment 3 2012-11-01 09:16:41 PDT
(In reply to comment #2) > (From update of attachment 171869 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=171869&action=review > > > Source/WebCore/bindings/v8/V8DOMMap.cpp:-88 > > -void visitDOMObjects(DOMWrapperVisitor<void>* visitor) > > This is not used by anybody, right? Not anymore! :)
WebKit Review Bot
Comment 4 2012-11-01 09:48:14 PDT
Comment on attachment 171869 [details] Patch Clearing flags on attachment: 171869 Committed r133187: <http://trac.webkit.org/changeset/133187>
WebKit Review Bot
Comment 5 2012-11-01 09:48:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.