[V8] The V8DOMMap visitors are no longer needed https://bugs.webkit.org/show_bug.cgi?id=100963

Reviewed by Kentaro Hara.

This patch inlines visitAllDOMNodes into its one caller (and removes
one layer of visitor adaptor abstraction).

* bindings/v8/ScriptProfiler.cpp:
(WebCore::ScriptProfiler::visitNodeWrappers):
* bindings/v8/V8DOMMap.cpp:
* bindings/v8/V8DOMMap.h:
(WebCore):


Canonical link: https://commits.webkit.org/119054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133187 268f45cc-cd09-0410-ab3c-d52691b4dbfc